Fix code compatibility